tests/diagnostics/statements/control_flow/for_condition_not_boolean/expect.txt
# exit: 1
input/main.lang0:2:9: error: for condition must be boolean
      for 1 {
          ^
